sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value getNombre
   		 for(i<-getNombre()-2 to 0){
                        ^